--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
 <script type='text/javascript' src='bubble-shooter-example.js'></script>
 </head>
 
-<body>
+<body background-color: black;>
 
-<canvas id="viewport" width="628" height="628"></canvas></div>
+  <div style=margin-left: 600px;>
+    <canvas id="viewport" width="628" height="628"></canvas></div>
+  </div>
 </body>
 
 </html> 
