--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 
 <body background-color: black;>
 
-  <div style=margin-left: 600px;>
-    <canvas id="viewport" width="628" height="628"></canvas></div>
+  <div style="margin-left: 600px;">
+    <canvas id="viewport" width="628" height="628"></canvas>
   </div>
 </body>
 
