--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <script type='text/javascript' src='bubble-shooter-example.js'></script>
 </head>
 
-<body background-color: black;>
+<body style="background-color: black;">
 
   <div style="margin-left: 600px;">
     <canvas id="viewport" width="628" height="628"></canvas>
